--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop10/cop10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop10/cop10.component.html
@@ -45,8 +45,8 @@
   <div class="ui attached segment">
     <br>
     <div class="ui grid">
-        <div class="sixteen centered wide column" >
-            <canvas id="myChart2" width="1500" height="400"></canvas>
+        <div class="sixteen wide column" >
+            <canvas id="myChart2" width="1500" height="400" style="margin: auto;"></canvas>
         </div>
     </div>
     <br>
