--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -15,7 +15,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/1-1">กระดาษทำการรับวัตถุดิบ </a>
+                                                <!-- <a href="javascript:;" routerLink="/ope04/1-1">กระดาษทำการรับวัตถุดิบ </a> -->
+                                                กระดาษทำการรับวัตถุดิบ
                                             </div>
                                         </div>
                                     </div>
@@ -23,8 +24,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/2-1">กระดาษทำการจ่ายวัตถุดิบ
-                                                </a>
+                                                <!-- <a href="javascript:;" routerLink="/ope04/2-1">กระดาษทำการจ่ายวัตถุดิบ</a> -->
+                                                กระดาษทำการจ่ายวัตถุดิบ
                                             </div>
                                         </div>
                                     </div>
@@ -32,8 +33,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/3-1">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
-                                                </a>
+                                                <!-- <a href="javascript:;" routerLink="/ope04/3-1">กระดาษทำการตรวจนับวัตถุดิบคงเหลือ</a> -->
+                                                กระดาษทำการตรวจนับวัตถุดิบคงเหลือ
                                             </div>
                                         </div>
                                     </div>
@@ -41,8 +42,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/4">กระดาษทำการรับสินค้าสำเร็จรูป
-                                                </a>
+                                                <!-- <a href="javascript:;" routerLink="/ope04/4">กระดาษทำการรับสินค้าสำเร็จรูป</a> -->
+                                                กระดาษทำการรับสินค้าสำเร็จรูป
                                             </div>
                                         </div>
                                     </div>
@@ -50,8 +51,8 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a href="javascript:;" routerLink="/ope04/5">
-                                                    กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                                <!-- <a href="javascript:;" routerLink="/ope04/5">กระดาษทำการจ่ายสินค้าสำเร็จรูป </a> -->
+                                                กระดาษทำการจ่ายสินค้าสำเร็จรูป
                                             </div>
                                         </div>
                                     </div>
@@ -59,8 +60,7 @@
                                         <i class="file outline icon"></i>
                                         <div class="content">
                                             <div class="header">
-                                                <a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต
-                                                    (ภส.05 - 02)</a>
+                                                <a routerLink="/ope04/6-2" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)</a>
                                             </div>
                                         </div>
                                     </div>
