--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
@@ -7,15 +7,17 @@
       </span>
     </div>
 
-    <div class="ui attached segment">
+    <div class="ui attached segment" [ngClass]="{'loading': isLoading}" >
+
       <div class="ui form">
         <div class="inline fields">
             <div class="three wide field "></div>
           <div class="eight wide field ">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
-            <select name="selectZone" id="selectZone" class="ui dropdown ai">
-              <option *ngFor="let item of selectZone; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+            <select name="sector " id="sector" class="ui dropdown ai search full-width office" (change)="area($event)">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of sectorList; index as i;" value="{{item.lovId}}">{{item.subTypeDescription}}</option>
+          </select>
           </div>
         </div>
 
@@ -23,8 +25,9 @@
             <div class="three wide field "></div>
           <div class="eight wide field">          
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
-            <select name="selectArea" id="selectArea" class="ui dropdown ai">
-              <option *ngFor="let item of selectArea; index as i;" value="{{i+1}}">{{item.value}}</option>
+            <select name="area" id="area" class="ui dropdown ai search full-width office">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of areaList" value="{{item.lovId}}">{{item.subTypeDescription}}</option>
             </select>
           </div>
         </div>
@@ -32,18 +35,18 @@
 
         <div class="inline fields">
             <div class="three wide field "></div>
-          <div class="nine wide field">
-            <label class="custom-label-w-20" style="margin-right: 5%;">วันที่จัดเก็บรายได้ ตั้งแต่</label>
-            <div class="seven wide field">
+          <div class="eight wide field">
+            <label class="custom-label-w-25" >วันที่จัดเก็บรายได้ ตั้งแต่</label>
+            <div class="eight wide field">
               <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="วว/ดด/ปปปป" value="03/11/2560" readonly="">
+                <input type="text" placeholder="วว/ดด/ปปปป" value="" >
                 <i class="add to calendar icon"></i>
               </div>
             </div>
             <div class="eight wide field">
               <label>ถึง</label>
               <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="วว/ดด/ปปปป" value="03/11/2560" readonly="">
+                <input type="text" placeholder="วว/ดด/ปปปป" value="" >
                 <i class="add to calendar icon"></i>
               </div>
             </div>
@@ -57,7 +60,7 @@
               <i class="arrow circle left icon"></i>
               ย้อนกลับ
             </button>
-          <button class="ui mini primary button" routerLink="/int01/4/3">
+          <button class="ui mini primary button" (click)="compaireData()">
             <i class="checkmark box icon"></i>
             ตรวจสอบ
           </button>
@@ -67,3 +70,101 @@
     </div>
   </div>
 </div>
+
+<div class="ui segments" [hidden]="!isSearch">
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">แสดงผลการตรวจสอบ</div>
+    <div class="ui bottom segment" [ngClass]="{'loading': isLoading}">
+     
+      <table  class="ui small celled table striped selectable">
+        <thead>
+          <tr style="text-align: center">
+            <th colspan="6">งบทดลอง</th>
+            <th colspan="4">งบสรุปยอดเงินภาษี</th>
+            <th rowspan="2">ผลต่าง</th>
+          </tr>
+          <tr style="text-align: center;">
+            <th rowspan="2" colspan="2">บัญชีแยกประเภท</th>
+            <th rowspan="2">ยอดยกมา</th>
+            <th rowspan="2">เดบิต</th>
+            <th rowspan="2">เครดิต</th>
+            <th rowspan="2">ยอดยกไป</th>
+
+            <th colspan="3">หมวดภาษี</th>
+            <th colspan="1">ยอดภาษี</th>
+          </tr>
+          <!-- <tr style="text-align: center"> -->
+            <!-- <th>รหัสภาษี</th>
+            <th>รายการ</th>
+            <th>สาขา</th> -->
+            <!-- <th>รวม</th> -->
+          <!-- </tr> -->
+         
+        </thead>
+        <tbody>
+
+            <tr *ngFor="let item of compareList">
+                <td> {{item.trialBalance.accountNo}}</td>
+                <td> {{item.trialBalance.accountDes}} </td>
+                <td> {{item.trialBalance.bringForwardAmount}} </td>
+                <td> {{item.trialBalance.debit}} </td>
+                <td> {{item.trialBalance.credit}} </td>
+                <td> {{item.trialBalance.carryForwardAmount}} </td>
+                <td colspan="3">
+
+                  <table class="ui small celled table striped selectable" *ngIf="item.typeTaxVoList.length > 0">
+                    <thead>
+                      <tr>
+                        <th>รหัสภาษี</th>
+                        <th>รายการ</th>
+                        <th>สาขา</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let txlist of item.typeTaxVoList" >
+                          <td style="width: 75px;"> {{txlist.incomeCode}} </td>
+                          <td style="width: 170px;"> {{txlist.incomeName}} </td>
+                          <td>
+                              <!-- <div *ngFor="let office of txlist.officeList"> -->
+                                <table style="width: 100%" >
+                                  <tr *ngFor="let office of txlist.officeList">
+                                    <td style="width: 70%;"> {{office.officeName}} </td>
+                                    <td style="text-align: right;" > {{office.total}} </td>
+                                  </tr>
+                                </table>
+                                 <!-- <span> {{office.officeName}} </span> : {{office.total}} -->
+                              <!-- </div> -->
+                          </td>
+                          
+                        </tr>
+                    </tbody>
+
+                  </table>
+
+                </td>
+                <!-- <td>8</td>
+                <td>9</td> -->
+                <td style="text-align: right"> {{item.totalCal}} </td>
+                <td style="text-align: right"> {{item.diff}} </td>
+            </tr>
+
+        </tbody>
+
+      </table>
+
+      <div class="ui center aligned grid">
+        <div class="six wide column">
+          <!-- <button class="ui mini button" routerLink="/int01/4/2">
+            <i class="arrow circle left icon"></i>
+            ย้อนกลับ
+          </button> -->
+          <button class="ui mini primary button" routerLink="/int01/4/4">
+            <i class="print icon"></i>   ส่งออก
+          </button>
+          <button class="ui mini primary button" routerLink="/int01/4/4">
+            ตั้งค่าจับคู่รหัสภาษี
+          </button>
+        </div>
+
+
+    </div>
+  </div>
