updated mockup epa

--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa03/epa03-2/epa03-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa03/epa03-2/epa03-2.component.html
@@ -22,7 +22,7 @@
         <label>ชื่อ :</label>
       </div>
       <div class="four wide field">
-        <input type="text">
+        <input type="text" value="บริษัท สยามแก๊ส แอนด์ ปิโตรเคมีคัลส์ จำกัด (มหาชน) ">
       </div>
       <div class="three wide field ">
         <label>เลขบัตรประชาชน/เลขทะเบียนนิติบุคคล :</label>
@@ -54,13 +54,13 @@
         <label>ขอนำสินค้าออกจาก :</label>
       </div>
       <div class="four wide field">
-        <input type="text">
+        <input type="text" value="บริษัท สยามแก๊ส แอนด์ ปิโตรเคมีคัลส์ จำกัด (มหาชน) ">
       </div>
       <div class="three wide field ">
         <label>ทะเบียนสรรพสามิต :</label>
       </div>
       <div class="four wide field">
-        <input type="text">
+        <input type="text" value="0107548000650-3-001">
       </div>
     </div>
 
@@ -70,7 +70,7 @@
         <label>เพื่อ :</label>
       </div>
       <div class="four wide field">
-        <input type="text">
+        <input type="text" value="ส่งออกนอกราชอาณาจักร">
       </div>
     </div>
 
