--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-3/epa01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-3/epa01-3.component.html
@@ -54,8 +54,7 @@
   </div>
 
 </div>
-
-<!-- ///// Datatable Segment ///// -->
+<!-- form search -->
 <div class="ui segment {{loading ? 'loading' : ''}}" style="width: 100%;">
   <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
     <thead>
